--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^4.3.1
-
+  path_provider: ^1.6.11
+  socket_io_client: ^0.9.11
+  shared_preferences: ^0.5.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,10 +48,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/spotify_logo_green.png
+    - assets/Spotify_Icon_RGB_White.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
