--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   path_provider: ^1.6.11
   socket_io_client: ^0.9.11
   shared_preferences: ^0.5.8
+  tuple: ^1.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
