--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   tuple: ^1.0.3
   http: ^0.12.2
   json_annotation: ^3.1.0
+  firebase_core: "0.5.0+1"
+  firebase_auth: "^0.18.1+2"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
