--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   json_annotation: ^3.1.0
   firebase_core: "0.5.0+1"
   firebase_auth: "^0.18.1+2"
+  firebase_database: "^4.1.1"
+  uuid: ^2.2.2
+  logger: ^0.9.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
