--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   firebase_database: "^4.1.1"
   uuid: ^2.2.2
   logger: ^0.9.4
-
+  marquee: ^1.6.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
