--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,7 +34,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.yay"
-        minSdkVersion 16
+        minSdkVersion 28
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -61,6 +61,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
     implementation "com.google.code.gson:gson:2.8.5"
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.giphy.sdk:ui:2.0.5'
+
 }
 
 flutter {
