--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   firebase_core: "0.5.0+1"
   firebase_auth: "^0.18.1+2"
   firebase_database: "^4.1.1"
+  cloud_firestore: null
+
   uuid: ^2.2.2
   logger: ^0.9.4
   intl: ^0.16.1
@@ -40,6 +42,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  webview_flutter: ^1.0.7
+
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +65,7 @@ flutter:
   assets:
     - assets/spotify_logo_green.png
     - assets/Spotify_Icon_RGB_White.png
+    - assets/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
